finally overflow fixed

--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ body {
   width: 100%;
   height: 100%;
   display: block;
+  overflow: hidden;
   background: url(http://www.script-tutorials.com/demos/360/images/stars.png) repeat
 }
 
